fix(ui5-button, ui5-split-button, ui5-segmented-button, ui5-toggle-button): align buttons vertically

--- a/packages/main/src/themes/Button.css
+++ b/packages/main/src/themes/Button.css
@@ -20,6 +20,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	vertical-align: middle;
 }
 
 .ui5-button-root {
