--- a/packages/main/src/themes/ToggleButton.css
+++ b/packages/main/src/themes/ToggleButton.css
@@ -1,3 +1,7 @@
+:host {
+	vertical-align: middle;
+}
+
 :host(:not([hidden])) {
 	display: inline-block;
 }
